--- a/src/next.html
+++ b/src/next.html
@@ -12,7 +12,8 @@
       <section>
         <h1 class="title">Manual Potterhead</h1>
       </section>
-      <input type="search-input" placeholder="Search Character">
+      <p id="resultado"></p>
+      <input type="text" id='searchInput'placeholder="Search Character">
       <button id="search-button">Buscar</button>
       <ul id="character-list"></ul>
       <div id="stats-container"></div>
